Using shared_ptr instead of unique_ptr for N_lock_list_set and friends.

--- a/old/atomics/cpp/CMakeLists.txt
+++ b/old/atomics/cpp/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
-project(seq_cst CXX)
+project(atomics CXX)
 include(.eecs230/CMakeLists.txt)
 
-add_program(seq_cst src/seq_cst.cpp)
 add_program(data_race src/data_race.cpp)
 add_program(mutex src/mutex.cpp)
 add_program(publish src/publish.cpp)
