--- a/futures/prime-timeout/Cargo.toml
+++ b/futures/prime-timeout/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
 
 [dependencies]
+futures = "0.1"
+futures-cpupool = "0.1"
+tokio-timer = "0.1"
+
