--- a/06-iterators/Cargo.toml
+++ b/06-iterators/Cargo.toml
@@ -3,7 +3,5 @@ name = "iterators"
 version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
 
-[dependencies]
-
-[dev-dependencies]
-quickcheck = "0.4"
+#[dev-dependencies]
+#quickcheck = "0.4"
