Added Iter8or::collect and FromIter8or; made list_set tests pass.
 - Added Iter8or::collect method, FromIter8or support trait, and impl
   for Vec.

 - Reimported quickcheck and its macros, since list_set tests rely
   that.

 - Changed used module in list_set doc tests to `iterators` from
   `ownership`.

--- a/06-iterators/Cargo.toml
+++ b/06-iterators/Cargo.toml
@@ -3,5 +3,5 @@ name = "iterators"
 version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
 
-#[dev-dependencies]
-#quickcheck = "0.4"
+[dev-dependencies]
+quickcheck = "0.4"
