--- a/01-ub/CMakeLists.txt
+++ b/01-ub/CMakeLists.txt
@@ -3,8 +3,10 @@ project(ub CXX)
 
 macro (add_program name)
     add_executable(${name} ${ARGN})
-    set_property(TARGET ${name} PROPERTY CXX_STANDARD 14)
-    set_property(TARGET ${name} PROPERTY CXX_STANDARD_REQUIRED On)
+    set_target_properties(${name} PROPERTIES
+            CXX_STANDARD            17
+            CXX_STANDARD_REQUIRED   On
+            CXX_EXTENSIONS          Off)
 endmacro (add_program)
 
 add_program(div_mul div_mul.cpp)
