--- a/05-ownership/Cargo.toml
+++ b/05-ownership/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+quickcheck = { version = "0.8", optional = true }
 
 [dev-dependencies]
-quickcheck = "0.4"
+quickcheck = "0.8"
