--- a/06-iterators/Cargo.toml
+++ b/06-iterators/Cargo.toml
@@ -2,6 +2,7 @@
 name = "iterators"
 version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
+edition = "2018"
 
 [dev-dependencies]
 quickcheck = "0.4"
