--- a/07-concurrency/Cargo.toml
+++ b/07-concurrency/Cargo.toml
@@ -2,6 +2,7 @@
 name = "concurrency"
 version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-rand = "0.4.2"
+rand = "0.6.5"
