Upgraded to 2018 edition; removed useless extern crates.

--- a/08-futures/tokio-examples/Cargo.toml
+++ b/08-futures/tokio-examples/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tokio-examples"
 version = "0.1.0"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 bytes = "0.4"
